--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </ul>
     </nav>
     <div>
-        <img src="">
+        <img src="assets/images/cesar-bretana-gonzalez-a3dhUC7EhYg-unsplash.jpg">
     </div>
     <div>
         <h1>About Us</h1>
@@ -29,7 +29,8 @@
     </div>
     <div>
         <h1>The Dev Dish Quarterly Menu</h1>
-        <p>Wraps
+        <p>
+            -Wraps
             -Function Fries
             Buffalo chicken, romaine lettuce, tomatoes, carrots, ranch, blue cheese
             -Loop Wrap
@@ -65,13 +66,13 @@
     <div>
         <h1>Hours</h1>
             <ul>
-                <li> Monday: 10am-7pm </li>
-                <li> Tuesday: 10am-7pm </li>
-                <li> Wednesday: 10am-7pm </li>
-                <li> hursday: 10am-10pm </li>
-                <li> Friday: 10am-9pm </li>
-                <li> Saturday: 12pm-11pm </li>
-                <li> Sunday: 12pm-11pm </li>
+                <li> <Span> Monday:> 10am-7pm </Span> </li> 
+                <li> <Span>Tuesday: 10am-7pm </Span></li>
+                <li> <Span>Wednesday: 10am-7pm </Span></li>
+                <li> <Span>Thursday: 10am-10pm </Span></li>
+                <li> <Span>Friday: 10am-9pm </Span></li>
+                <li> <Span>Saturday: 12pm-11pm </Span></li>
+                <li> <Span>Sunday: 12pm-11pm </Span></li>
             </ul>
     </div>
     
