--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
         <div></div>
         <ul>
             <li><a href="#about-us">About us</a></li>
-            <li><a href="Dev Favorites">ADev Favorites</a></li>
+            <li><a href="Dev Favorites">Dev Favorites</a></li>
             <li><a href="Location">About Us</a>Location</li>
-            <li><a href="Hours">About Us</a>ours</li>
+            <li><a href="Hours">About Us</a>Hours</li>
         </ul>
     </nav>
     <div>
@@ -58,7 +58,7 @@
     <div>
         <h1>The Developer's Favorites</h1>
         <p>Enjoy Dev Dish fan favorite menu items at local events or book us for a visit to your neighborhood or for your special occasion.</p>
-    </div>
+        </div>
     <div>
         <<h1>Location</h1>
         <p> 511 Tristin Isle Park Hudsonton, Michigan</p>
@@ -66,7 +66,7 @@
     <div>
         <h1>Hours</h1>
             <ul>
-                <li> <Span> Monday:> 10am-7pm </Span> </li> 
+                <li> <Span> Monday: 10am-7pm </Span> </li> 
                 <li> <Span>Tuesday: 10am-7pm </Span></li>
                 <li> <Span>Wednesday: 10am-7pm </Span></li>
                 <li> <Span>Thursday: 10am-10pm </Span></li>
