--- a/index.html
+++ b/index.html
@@ -8,18 +8,19 @@
 </head>
 
 <body>
+    <img src="assets/images/cesar-bretana-gonzalez-a3dhUC7EhYg-unsplash.jpg">
     <h1>Navbar</h1>
     <nav>
         <div></div>
         <ul>
             <li><a href="#about-us">About us</a></li>
             <li><a href="Dev Favorites">Dev Favorites</a></li>
-            <li><a href="Location">About Us</a>Location</li>
-            <li><a href="Hours">About Us</a>Hours</li>
+            <li><a href="Location">Location</li>
+            <li><a href="Hours">Hours</li>
         </ul>
     </nav>
     <div>
-        <img src="assets/images/cesar-bretana-gonzalez-a3dhUC7EhYg-unsplash.jpg">
+        <img src="/workspaces/sdai-otj-1-4/assets/images/pexels-edwardeyer-1247755.jpg">
     </div>
     <div>
         <h1>About Us</h1>
@@ -60,7 +61,7 @@
         <p>Enjoy Dev Dish fan favorite menu items at local events or book us for a visit to your neighborhood or for your special occasion.</p>
         </div>
     <div>
-        <<h1>Location</h1>
+        <h1>Location</h1>
         <p> 511 Tristin Isle Park Hudsonton, Michigan</p>
     </div>
     <div>
