--- a/index.html
+++ b/index.html
@@ -9,18 +9,20 @@
 
 <body>
     <img src="assets/images/cesar-bretana-gonzalez-a3dhUC7EhYg-unsplash.jpg">
-    <h1>Navbar</h1>
+    <div>
+        <h1>Navbar</h1>
     <nav>
+        </div>
         <div></div>
         <ul>
             <li><a href="#about-us">About us</a></li>
             <li><a href="Dev Favorites">Dev Favorites</a></li>
             <li><a href="Location">Location</li>
-            <li><a href="Hours">Hours</li>
+            <li><a href="Hours">Hours</a></li>
         </ul>
     </nav>
     <div>
-        <img src="/workspaces/sdai-otj-1-4/assets/images/pexels-edwardeyer-1247755.jpg">
+        <img src="assets/images/pexels-edwardeyer-1247755.jpg">
     </div>
     <div>
         <h1>About Us</h1>
