--- a/index.html
+++ b/index.html
@@ -72,6 +72,11 @@
             <h3>Compile Chips</h3>
             <p class="menu-description">Tortilla chips and salsa verde</p>
         </section>
+        <section>
+            <h1 class="favorites-title">The Developer's Favorites</h1>
+            <p class="favorites-paragraph">Enjoy Dev Dish fan favorite menu items at local events or book us for a visit to your neighborhood or for your special occasion.</p>
+            
+        </section>
 
         <section id="location">
             <h1>Location</h1>
