--- a/index.html
+++ b/index.html
@@ -75,9 +75,11 @@
         <section>
             <h1 class="favorites-title">The Developer's Favorites</h1>
             <p class="favorites-paragraph">Enjoy Dev Dish fan favorite menu items at local events or book us for a visit to your neighborhood or for your special occasion.</p>
-            <img src="https://plus.unsplash.com/premium_photo-1664648119219-b00a63aa4bdb?q=80&w=1287&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
-            <img src="https://images.unsplash.com/photo-1666304752980-678d5c35c911?q=80&w=1287&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
-            <img src="https://plus.unsplash.com/premium_photo-1681406689562-62c0096db98f?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8dG9ydGlsbGElMjBjaGlwc3xlbnwwfHwwfHx8MA%3D%3D">
+            <div id="favorites-gallery">
+            <img class="fave-Dish-Pic" src="https://plus.unsplash.com/premium_photo-1664648119219-b00a63aa4bdb?q=80&w=1287&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+            <img class="fave-Dish-Pic" src="https://images.unsplash.com/photo-1666304752980-678d5c35c911?q=80&w=1287&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D">
+            <img class="fave-Dish-Pic" src="https://plus.unsplash.com/premium_photo-1681406689562-62c0096db98f?w=600&auto=format&fit=crop&q=60&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxzZWFyY2h8OXx8dG9ydGlsbGElMjBjaGlwc3xlbnwwfHwwfHx8MA%3D%3D">
+            </div>
         </section>
 
         <section id="location">
