--- a/index.html
+++ b/index.html
@@ -104,11 +104,29 @@
         </section>
     </main>
     <footer id="socialMedia">
-        <ul>
-            <li>Facebook</li>
-            <li>Twitter</li>
-            <li>Instagram</li>
-        </ul>
+        <div class="footer-social">
+            <ul>
+                <li>
+                    <a href="https://www.facebook.com" target="_blank">
+                        <img class="socials" src="/icons/Facebook_Logo_Primary.png" alt="Facebook">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.twitter.com" target="_blank">
+                        <img class="socials" src="/icons/twitter-icon2.png" alt="Twitter">
+                    </a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com" target="_blank">
+                        <img class="socials" src="/icons/Instagram_Glyph_Gradient.png" alt="Instagram">
+                    </a>
+                </li>
+            </ul>
+        </div>
+    
+        <div class="footer-bottom">
+            <p>&copy; 2024 Dev Dish. All rights reserved.</p>
+        </div>
     </footer>
 </body>
 </html>
