Updated Nav bar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <header>
         <nav>
             <ul>
-                <li ><a href="#about-us">About us</a></li>
+                <li><a href="#about-us">About us</a></li>
                 <li><a href="#dev-favorites">Dev Favorites</a></li>
                 <li><a href="#location">Location</a></li>
                 <li><a href="#hours">Hours</a></li>
@@ -125,7 +125,7 @@
         </div>
     
         <div class="footer-bottom">
-            <p>&copy; 2024 Dev Dish. All rights reserved.</p>
+            <p>&copy; 2024 Dev Dish. All Rights Reserved.</p>
         </div>
     </footer>
 </body>
