Added JS file and fade in effect to Hero Image

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <h3>Compile Chips</h3>
             <p class="menu-description">Tortilla chips and salsa verde</p>
         </section>
-        <section>
+        <section class="favorites">
             <h1 class="favorites-title">The Developer's Favorites</h1>
             <p class="favorites-paragraph">Enjoy Dev Dish fan favorite menu items at local events or book us for a visit to your neighborhood or for your special occasion.</p>
             <div id="favorites-gallery">
@@ -88,9 +88,7 @@
                 511 Tristin Isle Park <br>
                 Hudsonton, Michigan
             </address>
-        </section>
-
-        <section id="hours">
+        
             <h1>Hours</h1>
             <ul>
                 <li> <span>Monday: 10am-7pm</span> </li> 
@@ -128,5 +126,6 @@
             <p>&copy; 2024 Dev Dish. All Rights Reserved.</p>
         </div>
     </footer>
+    <script src="./index.js"></script>
 </body>
 </html>
